@@ -1,3 +1,10 @@
+Mon Dec 23 12:42:13 2013  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
+
+	* array.c: Have to_h raise on elements that are not key-value pairs
+	  [#9239]
+
+	* enum.c: ditto
+
 Mon Dec 23 05:01:55 2013  Zachary Scott  <e@zzak.io>
 
 	* doc/syntax/methods.rdoc: [DOC] Added example for underscore
